<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_primary">

        <LinearLayout
            android:id="@+id/toolbar_layout"
            style="@style/Toolbar"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/title"
                style="@style/ToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/signing_owner_selection_title" />

            <TextView
                android:id="@+id/next_button"
                style="@style/ToolbarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_weight="0"
                android:text="@string/next" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_primary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scan_card_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/tangem_scan_card_instruction"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/label_primary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addresses_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                tools:listitem="@layout/item_owner_selection" />

            <ProgressBar
                android:id="@+id/loading_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/error"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
